# steno

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  release.yml
src/: error.rs  lib.rs  main.js  shared.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ui/: commands.rs  state.rs  tray.rs
src/audio/: linux.rs  macos.rs  mic.rs  mod.rs  wav_writer.rs  windows.rs
src/config/: mod.rs
src/detection/: audio_activity.rs  mod.rs  mode.rs  process_monitor.rs
src/events/: mod.rs  state.rs
src/ui/: commands.rs  mod.rs  state.rs  tray.rs
tests/: integration.rs
