[workspace]
resolver = "2"
members = [
    ".",
    "src-tauri",
]

[package]
name = "steno-core"
version = "0.1.0"
edition = "2021"
description = "Cross-platform meeting audio capture and relay core"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"

# Audio capture
cpal = "0.15"

# WAV encoding
hound = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
directories = "5"

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Secret storage
keyring = "3"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"

# Timestamps & IDs
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"

# Platform-specific audio
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Media_Audio",
    "Media_Capture",
    "Media_Devices",
    "Media_MediaProperties",
    "System",
    "UI",
    "UI_WindowManagement",
]}

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.8"

# Tauri UI dependencies (conditional)
tauri = { version = "2", optional = true, features = ["tray-icon"] }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }

[features]
default = []
ui = ["tauri", "tauri-plugin-shell", "tauri-plugin-notification"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
mockall = "0.13"

[lib]
name = "steno_core"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"